force-app/main/default/objects/KimbleOne__AllowancePeriod__c/KimbleOne__AllowancePeriod__c.object-meta.xml
<CustomObject>
    <label>Allowance Period</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Allowance Period Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowance Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>