force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__AllocationAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocationAmount__c</fullName>
    <label>Allocation Amount</label>
    <summarizedField>KimbleOne__AllowancePeriodAllocation__c.KimbleOne__AllocationAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__AllowancePeriodAllocation__c.KimbleOne__AllowancePeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>