force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__AllowanceAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceAmount__c</fullName>
    <label>Allowance Amount</label>
    <summarizedField>KimbleOne__AllowancePeriodAllowance__c.KimbleOne__AllowanceAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__AllowancePeriodAllowance__c.KimbleOne__AllowancePeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>