force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__AllowancePeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowancePeriodType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allowance Period Type</label>
    <referenceTo>KimbleOne__AllowancePeriodType__c</referenceTo>
    <relationshipLabel>Allowance Periods</relationshipLabel>
    <relationshipName>AllowancePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>