force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__AllowanceRegion__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceRegion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allowance Region</label>
    <referenceTo>KimbleOne__AllowanceRegion__c</referenceTo>
    <relationshipLabel>Allowance Periods</relationshipLabel>
    <relationshipName>AllowancePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>