force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DayOfWeek__c</fullName>
    <label>Day Of Week</label>
    <length>3</length>
    <type>Text</type>
</CustomField>