force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__EndTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndTime__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>