force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__JourneyLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__JourneyLocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Journey Location</label>
    <referenceTo>KimbleOne__JourneyLocation__c</referenceTo>
    <relationshipLabel>Allowance Periods</relationshipLabel>
    <relationshipName>AllowancePeriods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>