force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__PeriodNumber__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodNumber__c</fullName>
    <label>Period Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>