force-app/main/default/objects/KimbleOne__AllowancePeriod__c/fields/KimbleOne__StartTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartTime__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>